[gd_scene load_steps=6 format=3 uid="uid://cyb88nidcvb51"]

[ext_resource type="Script" path="res://menu.gd" id="1_gkga2"]
[ext_resource type="Texture2D" uid="uid://dp557lti83w5p" path="res://assets/pc/bonitrevas.png" id="2_7sybx"]
[ext_resource type="Theme" uid="uid://e3wa1604kqud" path="res://ui_theme.tres" id="2_huf66"]
[ext_resource type="Texture2D" uid="uid://yo8h3qfyy1e0" path="res://assets/TITLE.png" id="3_rmjoe"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_h8ioq"]

[node name="MenuControl" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gkga2")

[node name="bg" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.211765, 0.133333, 0.211765, 1)
metadata/_edit_lock_ = true

[node name="boni_menu" type="TextureRect" parent="bg"]
z_index = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 0.84
anchor_top = 0.179
anchor_right = 0.994
anchor_bottom = 1.0
offset_left = -283.0
grow_horizontal = 0
grow_vertical = 2
scale = Vector2(0.82, 0.82)
texture = ExtResource("2_7sybx")
stretch_mode = 5
metadata/_edit_lock_ = true

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -526.0
offset_top = -204.0
offset_right = 121.68
offset_bottom = 205.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_lock_ = true

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
metadata/_edit_lock_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.0
metadata/_edit_lock_ = true

[node name="Título" type="TextureRect" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("3_rmjoe")
expand_mode = 5
metadata/_edit_lock_ = true

[node name="HSeparator" type="HSeparator" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 23
theme_override_styles/separator = SubResource("StyleBoxEmpty_h8ioq")
metadata/_edit_lock_ = true

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_stretch_ratio = 0.38
metadata/_edit_lock_ = true

[node name="JogarBtn" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer/VBoxContainer2"]
layout_mode = 2
theme = ExtResource("2_huf66")
text = "Jogar"

[node name="OpcoesBtn" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "Opções"

[node name="SairBtn" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "Sair"

[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/VBoxContainer2/JogarBtn" to="." method="_on_jogar_btn_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/VBoxContainer2/OpcoesBtn" to="." method="_on_opcoes_btn_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/VBoxContainer2/SairBtn" to="." method="_on_sair_btn_pressed"]
